--- a/index.html
+++ b/index.html
@@ -876,20 +876,19 @@
           <div class="table__special">
             <ul class="table__special-list">
               <li class="table__special-item">
-                <div class="table__special-profit">Прибыль</div>
                 <div class="table__special-price">Цена</div>
                 <div class="table__special-available">Налич</div>
               </li>
               <li class="table__special-item">
                 <div class="table__special-profit">
                   <label class="choose__label sort__label">
-                    <input class="choose__input sort__input" type="checkbox" name="price">
+                    <input class="choose__input sort__input" type="checkbox" name="profit">
                     <span class="choose__name sort__name"></span>
                   </label>
                 </div>
                 <div class="table__special-price">
                   <label class="choose__label sort__label">
-                    <input class="choose__input sort__input" type="checkbox" name="price">
+                    <input class="choose__input sort__input" type="checkbox" name="price" checked>
                     <span class="choose__name sort__name"></span>
                   </label>
                 </div>
@@ -903,7 +902,7 @@
               <li class="table__special-item">
                 <div class="table__special-profit">
                   <label class="choose__label sort__label">
-                    <input class="choose__input sort__input" type="checkbox" name="price">
+                    <input class="choose__input sort__input" type="checkbox" name="profit">
                     <span class="choose__name sort__name"></span>
                   </label>
                 </div>
@@ -915,7 +914,7 @@
                 </div>
                 <div class="table__special-available">
                   <label class="choose__label sort__label">
-                    <input class="choose__input sort__input" type="checkbox" name="available">
+                    <input class="choose__input sort__input" type="checkbox" name="available" checked>
                     <span class="choose__name sort__name"></span>
                   </label>
                 </div>
@@ -923,7 +922,7 @@
               <li class="table__special-item">
                 <div class="table__special-profit">
                   <label class="choose__label sort__label">
-                    <input class="choose__input sort__input" type="checkbox" name="price">
+                    <input class="choose__input sort__input" type="checkbox" name="profit">
                     <span class="choose__name sort__name"></span>
                   </label>
                 </div>
@@ -1230,7 +1229,6 @@
           <div class="table__special">
             <ul class="table__special-list">
               <li class="table__special-item">
-                <div class="table__special-profit">Прибыль</div>
                 <div class="table__special-price">Цена</div>
                 <div class="table__special-available">Налич</div>
               </li>
@@ -1608,7 +1606,6 @@
           <div class="table__special">
             <ul class="table__special-list">
               <li class="table__special-item">
-                <div class="table__special-profit">Прибыль</div>
                 <div class="table__special-price">Цена</div>
                 <div class="table__special-available">Налич</div>
               </li>
