--- a/index.html
+++ b/index.html
@@ -239,15 +239,12 @@
                       </div>
 
                       <div class="form__info-block form__info-block--special">
-                        <div class="form__title">Ососбые условия</div>
+                        <div class="form__title">Особые условия</div>
 
                         <div class="form__info-block--wrapper">
                           <button type="button" class="form__btn--switcher">
                             <span>Вкл</span>
                             <span>Выкл</span>
-                            <svg width='12' height='12'>
-                              <use href='img/sprite/sprite.svg#arrow'></use>
-                            </svg>
                           </button>
                           <button type="button" class="form__btn--special"></button>
                         </div>
@@ -1252,7 +1249,7 @@
                   </label>
                 </div>
               </li>
-              <li class="table__special-item">
+              <li class="table__special-item mark">
                 <div class="table__special-profit">
                   <label class="choose__label sort__label">
                     <input class="choose__input sort__input" type="checkbox" name="price">
